version/0.14/_sources/api/solver/_autosummary/settings/beams.rst.txt
:orphan:

.. _beams:

beams
=====

.. autoclass:: ansys.fluent.core.solver.settings_231.beams.beams

.. rubric:: Methods

==================================================   =========================================

Method                                                                                 Summary

==================================================   =========================================
:ref:`copy <copy>`                                                     Copy optical beam grid.

:ref:`list_beam_parameters <list_beam_parameters>`       List parameters of optical beam grid.

==================================================   =========================================

.. rubric:: Named object type

:ref:`beams_child <beams_child>`


.. rubric:: Included in:

======================   ================================

Parent                                            Summary

======================   ================================
:ref:`optics <optics>`       Enter the optics model menu.

======================   ================================

